management/logging/fluentd-daemonset-elasticsearch-rbac.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-to-es
  namespace: logging
  labels:
    k8s-app: fluentd-to-es
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-to-es
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-to-es
        version: v1
    spec:
      serviceAccount: fluentd-to-es
      serviceAccountName: fluentd-to-es
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd-to-es
        image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        # The entries in /var/log/containers map into /u01/data/docker/containers in OKE
        - name: u01data
          mountPath: /u01/data/docker/containers/
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      # Where u01data goes       
      - name: u01data
        hostPath:
          path: /u01/data/docker/containers/
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
