management/logging/fluentd-daemonset-ooss-rbac.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-to-ooss
  namespace: logging
  labels:
    k8s-app: fluentd-to-ooss
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-to-ooss
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-to-ooss
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccount: fluentd-to-ooss
      serviceAccountName: fluentd-to-ooss
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd-to-ooss
        image: fluent/fluentd-kubernetes-daemonset:v1-debian-s3
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log/
        - name: u01data
          mountPath: /u01/data/docker/containers/
          readOnly: true
        - name: fluentconfig
          mountPath: /fluentd/etc/override/
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log/
      - name: u01data
        hostPath:
          path: /u01/data/docker/containers/
      - name: fluentconfig
        configMap:
          name: fluentd-config-to-ooss
